tests/agl/rejections/type/partial_special_ask.agl
let answer: text = ask(?)
answer
